web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.scss
/* ... */
.subquestion_panel {
  padding: 0.6rem;
}
.answer_descr {
  color: #164d61;
}
.extra_note {
  font-size: 0.7rem;
  color: #164d61;
  font-family: "Rubik";
  padding-top: 0.4rem;
  margin-bottom: 4px !important;
}
.dialog {
  position: relative;
}
.note_preview_button_panel {
  width: 98%;
  padding-top: 0.8rem;
}

.preview_questionpanel {
  padding: 0.8rem;
}
.time_dropdown_panel {
  display: flex;
  background-color: #d8dce5;
  border-radius: 8px;
  padding: 0.2rem;
  width: 100%;
}
.common_input_dropdown_time {
  width: 100%;
  min-width: 40px;
  outline: none;
  border: none;
  border-radius: 4px;
}
.display_time {
  display: flex;
  width: 100%;
  padding: 0px 5px;
  background-color: #e4e8eb;
  color: #164d61;
}

.extra_note_data {
  background-color: #ffffff;
  border-radius: 8px;
  height: 40px;
  max-height: 40px;
  border: none;
  font-size: 0.7rem;
  font-family: "Rubik";
  color: #164d61;
  width: 100%;
  resize: none;
}
.common_content_data_title {
  font-size: 0.8rem !important;
  line-height: 30px;
  font-family: "Rubik-normal";
}
.summary_heading {
  font-size: 1.5rem;
  line-height: 1.8rem;
  font-family: "Rubik";
  font-weight: 600;
  color: #3bcbc4;
}
.preview_question_title {
  color: #3bcbc4;
  font-family: "Rubik";
  font-size: 0.8rem;
  margin-bottom: 0.6rem;
}

::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px #164d61;
  border-radius: 10px;
  background-color: #f5f5f5;
}

::-webkit-scrollbar {
  width: 6px;
  background-color: #164d61;
}

::-webkit-scrollbar-thumb {
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px #164d61;
  background-color: #0e0f0f;
}

::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  border-radius: 10px;
  background-color: transparent !important;
}

::-webkit-scrollbar-thumb {
  border-radius: 10px;
  min-height: 5px !important;
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
  background-color: #164d61;
}
// i
.additionalNotes {
  width: 95%;
  border-radius: 0.5rem;
  min-height: 100px;
  padding: 0.8rem;
  font-size: 0.8rem;
  font-family: "Rubik";
}
.add_new_program {
  padding-right: 0.8rem;
  display: flex;
}

.downloadreport_panel {
  display: flex;
  width: 100%;
}


::ng-deep .mat-dialog-container {
  background-color: #164d61 !important;
  color: #ffffff;
  border-radius: 20px;
  height: fit-content;
}

ned-dialog {
  outline: 2px solid purple;
}

.common_input_dropdown {
  margin-bottom: 0.8rem;
}
.left_panel {
  width: 100%;
  margin-right: 0.8rem;
}
.right_panel {
  width: 100%;
}

.activeStatusStyle {
  font-style: italic !important;
  font-size: 0.4rem !important;
  // font-family: 'Rubik';
  color: #8226df !important;
}

.minimizebutton {
  width: 1.5rem;
  height: 1.5rem;
  filter: brightness(0) saturate(100%) invert(65%) sepia(91%) saturate(311%)
    hue-rotate(126deg) brightness(90%) contrast(91%);
  position: absolute;
  right: 20px;
  top: 20px;
}
.maximizebutton {
  width: 1.5rem;
  height: 1.5rem;
  filter: brightness(0) saturate(100%) invert(65%) sepia(91%) saturate(311%)
    hue-rotate(126deg) brightness(90%) contrast(91%);
  position: absolute;
  left: 0px;
  top: 0px;
}

.dialogPdf {
  height: 700px;
  overflow-y: auto;
  width: 730px;
}
.noteImg {
  width: 1rem;
  height: 1rem;
}
.billingOverviewDatePanel {
  display: flex;
  justify-content: space-between;
  padding-bottom: 0.8rem;
}
.billingOverviewDatePanel_left {
  margin-right: 0.4rem;
}

.program_condtion {
  margin-top: 0.4rem;
}
.symptomsdescr {
  overflow-y: auto;
  max-height: 2.5rem;
  margin-right: 10px;
  padding-right: 5px;
}

.symptomsdescr::-webkit-scrollbar-track {
  // -webkit-box-shadow: inset 0 0 6px rgb(255,255,255);
  border-radius: 10px;
  background-color: #ffffff !important;
}

.symptomsdescr::-webkit-scrollbar-thumb {
  border-radius: 10px;
  min-height: 5px !important;
  background-color: #edeff5 !important;

  // -webkit-box-shadow: inset 0 0 6px rgb(255,255,255);
}

.patient_inActive {
  background-color: #ffffff;
  color: #c1c7d5;
}

.priority_missing {
  background-color: #ffffff;
  color: #9b5d0c;
  border: 1px solid #9b5d0c;
}
.btn_subPanel {
  display: flex;
  justify-content: space-between;
  width: 97%;
  padding-right: 0.8rem;
}

.refresh {
  font-family: "Rubik-normal";
  cursor: pointer;
}

.refreshIcon {
  width: 1.5rem;
  height: 1.5rem;
}
.billing_refresh {
  display: flex;
  width: 100%;
  justify-content: space-between;
  align-items: center;
}

.mat-dialog-actions {
  min-height: fit-content !important;
  min-width: fit-content !important;
  margin-bottom: 0px !important;
}
.mat-dialog-content {
  margin: 0px !important;
}
.message_btn_action_panel {
  padding-right: 0.8rem;
}
.no_graphdata {
  background-color: #ffffff;
  border-radius: 0.4rem;
  width: 100%;
  min-height: 50px;
  padding: 0.8rem;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 0.8rem;
  font-family: "Rubik";
}
.iconright {
  padding-left: 0.8rem;
}
.establishdisable {
  pointer-events: none;
  opacity: 0.3;
}
.remotevideo {
  width: 100%;
  height: 100%;

  z-index: 100;
}

// div#local.localvideo {
//   object-fit: contain;
//   width: fit-content;
//   height: 100%;
//   position: relative;
//   z-index: 1000;
// }

// div#remote.remotevideo {
//   object-fit: contain;
//   width: 100%;
//   height: 100%;
//   z-index: 100;
// }
.localvideo {
  // width: 100%;
  // height: 100%;
  margin-right: 0.8rem;

  position: absolute;
  top: 0px;
  left: 0px;

  z-index: 1000;
  min-width: 300px;
  //position: relative;
}
.dialogrenewDatePanel {
  width: 100%;
  height: 100%;
  background-color: #ffffff;
}
.myvideoContainer {
  height: 100%;
  background-color: #8226df;
  padding: 0.8rem;

  border-radius: 0.8rem;
  min-width: 500px;
  max-height: 500px;
  min-width: 60vw;
  max-height: 90vh;
  z-index: 1000;

}

.upper_toolPanel {
  display: flex;
  justify-content: space-between;
  height: fit-content;
  align-items: center;
}
/* ... */

